# diploma

./: CMakeLists.txt  MANIFEST.in  Pipfile  README.md  main.cpp  munitscpp.cp36-win_amd64.pyd  munitscpp.cp38-win_amd64.pyd  munitscpp.cpp  munitscpp.pxd  munitscpp.pyx  pyproject.toml  scrach.py  setup.py  tox.ini  version.py
Python/munits/: converters.py  quantity.py
Python/src/: converters.py  quantity.py
Python/test/: test_quantity.py
boost/: CMakeLists.txt
cpp/: CMakeLists.txt  ConverterFunction.cpp  ConverterFunction.h  converter.cpp  dynamic.cpp  dynamic.hpp  main.cpp  quantity.cpp  quantity.h  sandbox.py  setup.py  unit_notation.cpp
cpp/lib/Accesories/: accessories.hpp
cpp/pyinterface/: munitscpp.cpp  munitscpp.pxd  munitscpp.pyx  quantity.py
cpp/pyinterface/unit_test/: test_quantity.py
cpp/src/: converter.cpp  converter.hpp  dynamic.cpp  dynamic.hpp  metric.cpp  metric.hpp  quantity.cpp  quantity.h  resolver.cpp  resolver.hpp  unit_notation.cpp
cpp/test/: CMakeLists.txt
cpp/test/unit_test/: CMakeLists.txt  quantity_test.h  quantity_test.hpp  quantity_test_comparison.hpp  quantity_test_conversion.hpp  quantity_test_input_validation.hpp  quantity_test_mathop.hpp  quantity_test_representation.hpp  run_unit_tests.cpp
doc/html/: annotated.html  annotated_dup.js  classes.html  classmunits_1_1_converter-members.html  classmunits_1_1_converter.html  classmunits_1_1_converter.js  classmunits_1_1_converter_function-members.html  classmunits_1_1_converter_function.html  classmunits_1_1_converter_function.js  classmunits_1_1_prefix-members.html  classmunits_1_1_prefix.html  classmunits_1_1_prefix.js  classmunits_1_1_quantity-members.html  classmunits_1_1_quantity.html  classmunits_1_1_quantity.js  classmunits_1_1_resolver-members.html  classmunits_1_1_resolver.html  classmunits_1_1_resolver.js  classmunits_1_1_unit-members.html  classmunits_1_1_unit.html  classmunits_1_1_unit.js  classmunits_1_1_unit_notation-members.html  classmunits_1_1_unit_notation.html  classmunits_1_1_unit_notation.js  classmunits_1_1_unit_notation_vector-members.html  classmunits_1_1_unit_notation_vector.html  classmunits_1_1_unit_notation_vector.js  converter_8cpp.html  converter_8hpp.html  converter_8hpp_source.html  converter__function_8cpp.html  converter__function_8hpp.html  converter__function_8hpp_source.html  dir_0a31c64d9f1f2c74acde1e4feea70c37.html  dir_0a31c64d9f1f2c74acde1e4feea70c37.js  dir_76df29b002a5085640e56a1165adc240.html  dir_76df29b002a5085640e56a1165adc240.js  dir_8696e10bf52eced0040dd5feb22d544f.html  dir_8696e10bf52eced0040dd5feb22d544f.js  dir_e8fe3b06064f89fa593b1d2337dda382.html  (+57 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  files_0.js  files_1.js  files_2.js  (+29 more)
doc/latex/: annotated.tex  classmunits_1_1_converter.tex  classmunits_1_1_converter_function.eps  classmunits_1_1_converter_function.tex  classmunits_1_1_prefix.tex  classmunits_1_1_quantity.tex  classmunits_1_1_resolver.tex  classmunits_1_1_unit.eps  classmunits_1_1_unit.tex  classmunits_1_1_unit_notation.tex  classmunits_1_1_unit_notation_vector.tex  converter_8cpp.tex  converter_8hpp.tex  converter__function_8cpp.tex  converter__function_8hpp.tex  dir_0a31c64d9f1f2c74acde1e4feea70c37.tex  dir_76df29b002a5085640e56a1165adc240.tex  dir_8696e10bf52eced0040dd5feb22d544f.tex  dir_e8fe3b06064f89fa593b1d2337dda382.tex  dynamic_8cpp.tex  dynamic_8hpp.tex  files.tex  hierarchy.tex  metric_8cpp.tex  metric_8hpp.tex  namespacemunits.tex  namespaces.tex  parsers_8cpp.tex  parsers_8hpp.tex  prefix_8cpp.tex  prefix_8hpp.tex  quantity_8cpp.tex  quantity_8h.tex  refman.tex  searchers_8cpp.tex  searchers_8hpp.tex  structmunits_1_1_metric.tex  unit_8cpp.tex  unit_8hpp.tex  unit__notation_8cpp.tex  (+3 more)
lib/Accesories/: CMakeLists.txt  accessories.hpp  math.hpp  mymath.cpp  mymath.hpp
munits/: __init__.py  quantities.py  special_characters.py
munits.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
munitscs/munit_cs/: munit_cs.sln
munitscs/munit_cs/munit_cs/: Extensions.cs  Metrics.cs  Quantity.cs  munit_cs.csproj
munitscs/munit_cs/munits_sandbox/: Program.cs  munits_sandbox.csproj
munitscs/munitscs/: munitscs.sln  nuget_build.txt
py/: setup.py
py/munits/: __init__.py  converters.py  quantity.py  unit_not_alphabet.py  unitnotation.py
py/test/: test__greater__.py  test_quantity.py  test_unit_name.py
pyinterface/unit_test/: test_quantity.py
pyunit_test/: __main__.py  tes_basic_math.py  test_arithmetic_operations.py  test_basic_initialization.py  test_comparisony.py  test_conversion.py  test_from_json_converter.py  test_operation_in_same_unit.py  test_quantity.py
quantity/: __init__.py  munits.py
sqlupdate/: common.MeasurementUnit.sql  common.MeasurementUnitTypes.sql
src/: converter.cpp  converter.hpp  converter_function.cpp  converter_function.hpp  dynamic.cpp  dynamic.hpp  metric.cpp  metric.hpp  parsers.cpp  parsers.hpp  prefix.cpp  prefix.hpp  quantity.cpp  quantity.h  resolver.cpp  resolver.hpp  rresolver.cpp  rresolver.hpp  searchers.cpp  searchers.hpp  unit.cpp  unit.hpp  unit_notation.cpp  unit_notation.hpp  unit_validator.cpp  unit_validator.hpp  uresolver.cpp  uresolver.hpp
src/cs/: munitscsexport.cpp
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  converterfunction_test.hpp  quantity_test_base_mathop.hpp  quantity_test_comparison.hpp  quantity_test_conversion.hpp  quantity_test_derived_mathop.hpp  quantity_test_input_validation.hpp  quantity_test_mathop.hpp  quantity_test_representation.hpp  qunatity_test_basic_initialization.hpp  resolver_test.hpp  run_unit_tests.cpp  unit_validation_test.hpp
unit_test/: test_quantity.py
(+29 files in other folders)
